Trying to create a cmake file, added corona.lib file to be pushed

--- a/.gitignore
+++ b/.gitignore
@@ -15,9 +15,9 @@
 **/*.tlog
 **/*.lastbuildstate
 **/*.exp
-**/*.lib
 **/*.txt
 **/*.opendb
 **/*.json
 **/.vscode/**
 /mandelParallel/mandelParallel.sln
+!CMakeLists.txt
