Tried to start a cmake file to get the dll, lib, and .h corona libraries to compile, still no luck though

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,10 @@
 **/*.txt
 **/*.opendb
 **/*.json
+**/*.vcxproj**
 **/.vscode/**
+**/.vs/**
+**/CMakeFiles/**
+**/*.cmake
 /mandelParallel/mandelParallel.sln
 !CMakeLists.txt
