Finally fixed some include errors from new environment (reformatted laptop

--- a/.gitignore
+++ b/.gitignore
@@ -23,5 +23,5 @@
 **/.vs/**
 **/CMakeFiles/**
 **/*.cmake
-/mandelParallel/mandelParallel.sln
+!**/mandelParallel/mandelParallel.sln
 !CMakeLists.txt
